@@ -45,7 +45,7 @@ $htmlReport = $scriptFolder + "\reports\sec-report-" + $hostName + "-" + $dateSt
 
 # Clear and bind html report vars
 # -------------------------------------------------------------------------------------------\
-Clear-Variable -Name ("count*", "html*", "report*", "local*") -Scope Global
+Clear-Variable -Name ("count*", "os*", "html*", "report*", "local*", "online*", "json*") -Scope Global
 New-Variable -Force -Name countError -Option AllScope -Value 0
 New-Variable -Force -Name osBootTime -Option AllScope -Value ""
 New-Variable -Force -Name osWorksTime -Option AllScope -Value ""
@@ -54,6 +54,7 @@ New-Variable -Force -Name diskInfo -Option AllScope -Value @()
 New-Variable -Force -Name localPasswordPolicy -Option AllScope -Value @()
 New-Variable -Force -Name localAuditPolicy -Option AllScope -Value @()
 New-Variable -Force -Name localRegistryPolicy -Option AllScope -Value @()
+New-Variable -Force -Name deviceId -Option AllScope -Value @()
 
 # HTML Report Array Fragments
 New-Variable -Force -Name reportRestrictedServices -Option AllScope -Value @()
@@ -63,3 +64,9 @@ New-Variable -Force -Name reportSoft -Option AllScope -Value @()
 New-Variable -Force -Name reportDisks -Option AllScope -Value @()
 New-Variable -Force -Name reportBaseSettings -Option AllScope -Value @()
 New-Variable -Force -Name reportFeatures -Option AllScope -Value @()
+
+# JSON Objects
+New-Variable -Force -Name onlineId -Option AllScope
+New-Variable -Force -Name jsonDiskInfo -Option AllScope -Value @()
+
+#>
